2016-05-30  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_proctitle.c (proctitle_init): Fix memory leak.

2016-05-30  Matthew Mundell <matthew.mundell@greenbone.net>

	* base/kb_redis.c (select_database): Add missing space.

2016-05-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	The NASL command "script_description" is not used anymore by any
	NVT. It is superceeded by the tag "summary".

	* nasl/nasl_init.c (libfuncs):  Removed "script_description".

	* nasl/nasl_scanner_glue.c (script_description): Removed.

	* nasl/nasl_scanner_glue.h: Removed proto accordingly.

2016-05-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/bpf_share.c (bpf_open_live), misc/plugutils.c (mark_post),
	nasl/nasl_builtin_find_service.c (plugin_do_run): Fix memory leaks.

	* imsc/plugutils.h: Constify function parameter.

	* misc/network.c (ovas_scanner_context_s): Add tls_session element.
	(ovas_scanner_context_attach): Save context tls session.

	* nasl/nasl_socket.c (nasl_recv): Fix off-by-one memory write.

2016-05-26  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c (set_ids_evasion_mode, open_stream_connection_ext),
	nasl/nasl_http.c (_http_req): Fix memory leak.

	* nasl/nasl_misc_funcs.c (nasl_typeof): Fix smaller-by-one memory
	allocation.

2016-05-26  Matthew Mundell <matthew.mundell@greenbone.net>

	* base/kb_redis.c (get_redis_ctx): Connect inside the retry loop, in
	case the connection is lost between retries.

2016-05-26  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c (ovas_scanner_context_new): Fix allocated memory size.

2016-05-24  Michael Meyer <michael.meyer@greenbone.net>

	* nasl/nasl_builtin_find_service.c (plugin_do_run):
	Removed null bytes from buffer. Detect also mariadb.

2016-05-24  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (md4_data, rc4_data, nasl_get_smb2_sign_key):
	Remove functions.

	* nasl/nasl_crypto.h: Remove function header.
