@@ -2688,6 +2688,7 @@ plugin_run_find_service (lex_ctxt * lexic)
               if (sons[i] < 0)
                 sons[i] = 0;    /* Fork failed */
             }
+          g_free (sons_args[i]);
         }
     }
 
