@@ -352,7 +352,6 @@ get_array_elem (lex_ctxt * ctxt, const char *name, tree_cell * idx)
 }
 
 static void free_var_chain (named_nasl_var *);
-static void free_anon_var (anon_nasl_var *);
 
 /**
  * Note: the function does not free the nasl_array structure.
@@ -403,7 +402,7 @@ free_var_chain (named_nasl_var * v)
   g_free (v);
 }
 
-static void
+void
 free_anon_var (anon_nasl_var * v)
 {
   if (v == NULL)
